deployment_pvc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: guest00
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx01
  template:
    metadata:
      labels:
        app: nginx01
    spec:
      containers:
      - name: nginx-container
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /myvol
          readOnly: true
          name: cache
      volumes:
      - name: cache
        persistentVolumeClaim:
          claimName: guest00-vol
