pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx01
  namespace: guest00
  labels:
    app: nginx01
spec:
  containers:
    - name: nginx-container
      image: nginx
      ports:
        - containerPort: 80
