pod_limit01.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx01
  namespace: guest00
spec:
  containers:
    - name: nginx-container
      image: nginx
      resources:
        requests:
          memory: 0.2Gi
          cpu: 200m
        limits:
          memory: 0.2Gi
          cpu: 200m
      ports:
        - containerPort: 80
