pod_vol.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: guest00
spec:
  restartPolicy: Never
  volumes:
  - name: cache
    persistentVolumeClaim:
      claimName: guest00-vol
  containers:
  - name: nginx
    image: nginx:latest
    volumeMounts:
    - name: cache
      mountPath: /cache
