pod_vol_rwx01.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx01
  namespace: guest00
spec:
  restartPolicy: Never
  volumes:
  - name: cache
    persistentVolumeClaim:
      claimName: guest00-vol
  containers:
  - name: nginx01
    image: nginx:latest
    volumeMounts:
    - name: cache
      mountPath: /cache
