svc_test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
  namespace: guest00
spec:
  containers:
    - name: busybox
      image: yauritux/busybox-curl
      command: ["nslookup"]
      args: ["hpe-svc"]
  restartPolicy: Never
