statefulset.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: guest00
spec:
  ports:
  - port: 80
  clusterIP: None
  selector:
    app: nginx
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx
  namespace: guest00
spec:
  selector:
    matchLabels:
      app: nginx 
  serviceName: nginx
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: cache
          mountPath: /cache
  volumeClaimTemplates:
  - metadata:
      name: cache
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: hpe-nimble-block
      resources:
        requests:
          storage: 1Gi
