svc_clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: guest00
spec:
  selector:
    app: nginx01
  ports:
  - port: 80
  type: ClusterIP
