svc_externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: hpe-svc
  namespace: guest00
spec:
  type: ExternalName
  externalName: hpe.com
