svc_loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: guest00
spec:
  selector:
    app: nginx01
  ports:
  - port: 80
  loadBalancerIP: 172.16.3.200
  type: LoadBalancer
