svc_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: guest00
spec:
  selector:
    app: nginx01
  ports:
  - port: 80
    nodePort: 31000
  type: NodePort
