ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: nginx-ingress
 namespace: guest00
 annotations:
    kubernetes.io/ingress.class: gloo
spec:
  rules:
  - host: guest00-1.hybrid-lab.local
    http:
      paths:
      - path: /.*
        backend:
          serviceName: nginx-svc
          servicePort: 80
